src/test/deca/syntax/lexer/invalid/created/include/circular/circular_2.decah
#include "circular_1.decah"